--- a/app/views/rails_admin/main/_submit_buttons.html.erb
+++ b/app/views/rails_admin/main/_submit_buttons.html.erb
@@ -1,16 +1,16 @@
-<ul id="submitArea">
+<ul class="submit clearfix">
   <li class="save">
     <%= submit_tag t("admin.new.save"), :class => "button default", :name => "_save", :id => "save_btn" %>
   </li>
-  
+
   <li class="save add">
     <%= submit_tag t("admin.new.save_and_add_another"), :class => "button", :name => "_add_another" %>
   </li>
-  
+
   <li class="save edit">
     <%= submit_tag t("admin.new.save_and_edit"), :class => "button", :name => "_add_edit" %>
   </li>
-  
+
   <li class="cancel">
     <%= submit_tag t("admin.new.cancel"), :class => "button", :name => "_continue", :id => "cancel_btn" %>
   </li>
