--- a/app/views/rails_admin/main/edit.html.erb
+++ b/app/views/rails_admin/main/edit.html.erb
@@ -1,21 +1,22 @@
-      <div id="contentHeader">
-        <h2><%= @page_name %></h2>
-        <div id="quickAccess">
-          <ul id="quick">
-            <!--<li><a href="#">Quick add</a></li>-->
-            <li>
-             <%= link_to(t("admin.history.name"), rails_admin_history_object_path(:id => params[:id]), :class => "addlink") %>
+      <div class="block form edit">
+        <div class="header">
+          <h2><%= @page_name %></h2>
+          <ul class="actions">
+            <li class="action history">
+             <%= link_to(t("admin.history.name"), rails_admin_history_object_path(:id => params[:id])) %>
+            </li>
+            <li class="action delete">
+              <a href="<%= rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => params[:id]) %>"><span class="icon"><%= t("admin.list.delete_action") %></span></a>
             </li>
           </ul>
-          <a href="<%= rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => params[:id]) %>" id="deleteItem"><%= image_tag "rails_admin/cross.png", :alt => "Delete" %><%= t("admin.list.delete_action") %></a>
         </div>
-      </div>
-<%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
-      <div id="contentMainNew">
-        <%= form_for(@object, :url => rails_admin_update_path(:model_name => @abstract_model.to_param, :id => @object.id), :html => { :method => "put", :multipart => true }) do %>
-          <fieldset>
-            <%= render(:partial => 'form_section', :collection => RailsAdmin::config(@object).edit.visible_groups) -%>
-            <%= render :partial => 'edit_submit_buttons' %>
-          </fieldset>
-        <% end %>
+        <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
+        <div class="content">
+          <%= form_for(@object, :url => rails_admin_update_path(:model_name => @abstract_model.to_param, :id => @object.id), :html => { :method => "put", :multipart => true }) do |form| %>
+            <% @model_config.edit.with(:object => @object).visible_groups.each do |fieldset| %>
+              <%= render :partial => 'form_fieldset', :locals => { :fieldset => fieldset, :form => form, :object => @object } -%>
+            <% end %>
+            <%= render :partial => 'submit_buttons' %>
+          <% end %>
+        </div>
       </div>
