--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -22,83 +22,87 @@
   }
 <% end %>
 </style>
-      <div id="contentHeader">
-        <h2><%= @page_name %></h2>
-        <div id="quickAccess">
-          <ul id="quick">
+      <div class="block list">
+        <div class="header">
+          <h2><%= @page_name %></h2>
+          <ul>
             <li>
-             <%= link_to(t("admin.history.name"), rails_admin_history_model_path, :class => "addlink") %>
+             <%= link_to(t("admin.history.name"), rails_admin_history_model_path) %>
             </li>
             <li>
-             <%= link_to(t("admin.list.add_new"), rails_admin_new_path(:model_name => @abstract_model.to_param), :class => "addlink") %>
+             <%= link_to(t("admin.list.add_new"), rails_admin_new_path(:model_name => @abstract_model.to_param)) %>
             </li>
           </ul>
         </div>
-      </div>
-<%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
-      <div id="contentMainModules">
-        <div class="searchBox">
-          <%= form_tag(params.reject{|key, value| key.to_sym == :page}, :method => "get", :remote => true) do %>
-            <fieldset>
-              <input type="text" id="searchBar" name="query" value="<%= query %>"/>
-              <input type="submit" id="searchbar_btn" value="<%= t("admin.list.search_btn") %>" />
-            </fieldset>
+        <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
+        <div class="content">
+          <div class="highlight search">
+            <%= form_tag(params.reject{|key, value| key.to_sym == :page}, :method => "get", :remote => true) do %>
+              <fieldset>
+                <input type="text" name="query" value="<%= query %>"/>
+                <input type="submit" class="button" value="<%= t("admin.list.search_btn") %>" />
+              </fieldset>
+            <% end %>
+          </div>
+          <%= form_tag rails_admin_bulk_delete_path(:model_name => @abstract_model.to_param), :method => :get do %>
+            <table class="grid">
+              <thead>
+                <tr>
+                  <th class="other left">...</th>
+                  <% properties.each do |property| %>
+                  <% property_name = property.name %>
+                  <% property_pretty_name = property.label %>
+                  <% selected = sort == property_name.to_s %>
+                  <th class="<%= "#{property.css_class}" %> <%= selected ? "selected" : nil %>">
+                    <% if property.sortable? %>
+                    <% sort_location = params.merge(:sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {}) %>
+                    <% sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil %>
+                    <%= link_to(property_pretty_name.upcase, sort_location, :class => sort_direction, :remote => true) %>
+                    <% else %>
+                    <%= property_pretty_name.upcase %>
+                    <% end %>
+                  </th>
+                  <% end %>
+                  <th class="other right">...</th>
+                  <th class="action"><%= t("admin.list.edit_action").upcase %></th>
+                  <th class="action"><%= t("admin.list.delete_action").upcase %></th>
+                  <th class="action"><%= t("admin.list.select_action").upcase %></th>
+                </tr>
+              </thead>
+              <tfoot>
+                <tr>
+                  <td colspan="<%= properties.length + 5 %>">
+                    <%= submit_tag t("admin.list.delete_selected"), :class => "button delete bulk" %>
+                    <div class="pagination">
+                      <% if @page_count.to_i > 1 %>
+                        <%= paginate(@current_page, @page_count, :url => params).html_safe %>
+                      <% end %>
+                      <%= @record_count %>
+                      <%= @model_config.abstract_model.model.model_name.human(:count => @record_count, :default => @record_count != 1 ? @model_config.list.label.downcase.pluralize : @model_config.list.label.downcase) %>
+                      <% if @page_count.to_i == 2 %>
+                        <%= link_to(t("admin.list.show_all"), params.merge(:all => true), :remote => true, :class => "showall") %>
+                      <% end %>
+                    </div>
+                  </td>
+                </tr>
+              </tfoot>
+              <tbody>
+                <% @objects.each_with_index do |object, index| %>
+                <tr class="<%= index % 2 == 0 ? " odd" : " even" %>">
+                  <% other_left = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1) %>
+                  <td class="other left"><%= link_to("...", other_left, remote: true) %></td>
+                  <% properties.map{|property| property.bind(:object, object)}.each do |property| %>
+                    <td class="<%= "#{property.css_class}" %>"><%= [:text, :string].include?(property.type) ? property.formatted_value[0..40] : property.formatted_value %></td>
+                  <% end %>
+                  <% other_right = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i + 1) %>
+                  <td class="other right"><%= link_to("...", other_right, remote: true)%></td>
+                  <td class="action edit"><%= link_to(t("admin.list.edit_action"), rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id)) %></td>
+                  <td class="action delete"><%= link_to(t("admin.list.delete_action"), rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id)) %></td>
+                  <td class="action select"><%= check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_destroy_#{object.id}" %></td>
+                </tr>
+                <% end %>
+              </tbody>
+            </table>
           <% end %>
         </div>
-        <%= form_tag rails_admin_bulk_delete_path(:model_name => @abstract_model.to_param), :method => :get do %>
-          <table class="grid">
-            <thead>
-              <tr>
-                <th class="other left">...</th>
-                <% properties.each do |property| %>
-                <% property_name = property.name %>
-                <% property_pretty_name = property.label %>
-                <% selected = sort == property_name.to_s %>
-                <th class="<%= "#{property.css_class}" %> <%= selected ? "selected" : nil %>">
-                  <% if property.sortable? %>
-                  <% sort_location = params.merge(:sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {}) %>
-                  <% sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil %>
-                  <%= link_to(property_pretty_name.upcase, sort_location, :class => sort_direction, :remote => true) %>
-                  <% else %>
-                  <%= property_pretty_name.upcase %>
-                  <% end %>
-                </th>
-                <% end %>
-                <th class="other right">...</th>
-                <th class="action"><%= t("admin.list.edit_action").upcase%></th>
-                <th class="action"><%= t("admin.list.delete_action").upcase%></th>
-                <th class="action"><%= t("admin.list.select_action").upcase %></th>
-              </tr>
-            </thead>
-            <tbody>
-              <% @objects.each_with_index do |object, index| %>
-              <tr class="<%= index % 2 == 0 ? " odd" : " even" %>">
-                <% other_left = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1) %>
-                <td class="other left"><%= link_to("...", other_left, remote: true) %></td>
-                <% properties.map{|property| property.bind(:object, object)}.each do |property| %>
-                  <td class="<%= "#{property.css_class}" %>"><%= [:text, :string].include?(property.type) ? property.formatted_value[0..40] : property.formatted_value %></td>
-                <% end %>
-                <% other_right = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i + 1) %>
-                <td class="other right"><%= link_to("...", other_right, remote: true)%></td>
-                <td class="action edit"><%= link_to(t("admin.list.edit_action"), rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id)) %></td>
-                <td class="action delete"><%= link_to(t("admin.list.delete_action"), rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id)) %></td>
-                <td class="action select"><%= check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_destroy_#{object.id}" %></td>
-              </tr>
-              <% end %>
-            </tbody>
-          </table>
-          <div id="tableFooter">
-            <%= submit_tag t("admin.list.delete_selected"), :id => "bulkdelete_btn" %>
-            <div id="pagination">
-              <% if @page_count.to_i > 1 %>
-                <%= paginate(@current_page, @page_count, :url => params).html_safe %>
-              <% end %>
-              <%= @record_count %>
-              <%= @model_config.abstract_model.model.model_name.human(:count => @record_count, :default => @record_count != 1 ? @model_config.list.label.downcase.pluralize : @model_config.list.label.downcase) %>
-              <% if @page_count.to_i == 2 %>
-                <%= link_to(t("admin.list.show_all"), params.merge(:all => true), :remote => true, :class => "showall") %>
-              <% end %>
-            </div>
-          </div>
-        <% end %>
       </div>
