--- a/app/views/rails_admin/main/new.html.erb
+++ b/app/views/rails_admin/main/new.html.erb
@@ -1,12 +1,14 @@
-<div id="contentHeader">
-  <h2><%= @page_name %></h2>
-</div>
-<%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
-<div id="contentMainNew">
-  <%= form_tag(rails_admin_create_path(:model_name => @abstract_model.to_param), :multipart => true) do %>
-    <fieldset>
-      <%= render(:partial => 'form_section', :collection => RailsAdmin::config(@object).create.visible_groups) -%>
-      <%= render :partial => 'new_submit_buttons' %>
-    </fieldset>
-  <% end %>
-</div>
+      <div class="block form new">
+        <div class="header">
+          <h2><%= @page_name %></h2>
+        </div>
+        <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
+        <div class="content">
+          <%= form_for(@object, :url => rails_admin_create_path(:model_name => @abstract_model.to_param, :id => @object.id), :html => { :multipart => true }) do |form| %>
+            <% @model_config.create.with(:object => @object).visible_groups.each do |fieldset| %>
+              <%= render :partial => 'form_fieldset', :locals => { :fieldset => fieldset, :form => form, :object => @object } -%>
+            <% end %>
+            <%= render :partial => 'submit_buttons' %>
+          <% end %>
+        </div>
+      </div>
