--- a/app/views/rails_admin/main/_history.html.erb
+++ b/app/views/rails_admin/main/_history.html.erb
@@ -1,5 +1,5 @@
 <div class="header">
-  <h2><%= month_names[month] %> <%= year %> <%= t("admin.history.name").downcase %></h2>
+  <h2><%= month_names[month - 1] %> <%= year %> <%= t("admin.history.name").downcase %></h2>
 </div>
 <div class="content">
   <table class="grid">
