--- a/app/views/rails_admin/main/_form_polymorphic_association.html.erb
+++ b/app/views/rails_admin/main/_form_polymorphic_association.html.erb
@@ -1,16 +1,22 @@
 <%
   type_collection = field.polymorphic_type_collection
-  foreign_type = field.association[:options][:foreign_type]
-  selected_type = params["associations"] ? params["associations"][foreign_type] : type_collection.first[1]
+  type_column = field.association[:options][:foreign_type]
 
-  collection = field.associated_collection
-  selected = params["associations"] ? params["associations"][field.name] : nil
+  if params["associations"]
+    selected_type = params["associations"][type_column]
+    collection = field.associated_collection(selected_type)
+  else
+    selected_type = field.bindings[:object].send(type_column)
+    collection = field.associated_collection(selected_type)
+  end
+
+  selected = params["associations"] ? params["associations"][field.name] : field.value
 
   model_name = field.abstract_model.to_param.singularize
 %>
               <div class="field <%= field.to_param %>">
                 <%= label_tag field.to_param, field.label %>
-                <%= form.select foreign_type, type_collection, {:selected => selected_type}, :class => "selectField #{field.has_errors? ? "errorField" : nil}" %>
+                <%= form.select type_column, type_collection, {:include_blank => true, :selected => selected_type}, :class => "selectField #{field.has_errors? ? "errorField" : nil}" %>
                 <%= form.select field.name, collection, {:include_blank => true, :selected => selected}, :class => "selectField #{field.has_errors? ? "errorField" : nil}", :style => "margin-left:10px;" %>
                 <% if field.has_errors? %>
                 <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
@@ -19,21 +25,25 @@
                 <%= javascript_tag do %>
                   $j(document).ready(function($){
                     var urls = <%= field.polymorphic_type_urls.to_json.html_safe %>;
-                    $("#<%= "#{model_name}_#{foreign_type}" %>").bind("change", function(e){
-                      $.ajax({
-                        url: urls[$(this).val()],
-                        data: { compact: true },
-                        beforeSend: function(xhr) {
-                          xhr.setRequestHeader("Accept", "application/json");
-                        },
-                        success: function(data, status, xhr) {
-                          var html = '<option></option>';
-                          $(data).each(function(i, el) {
-                            html += '<option value="' + el.id + '">' + el.label + '</option>';
-                          });
-                          $("#<%= "#{model_name}_#{field.name}" %>").html(html);
-                        }
-                      });
+                    $("#<%= "#{model_name}_#{type_column}" %>").bind("change", function(e){
+                      if ("" == $(this).val()) {
+                        $("#<%= "#{model_name}_#{field.name}" %>").html('<option value=""></option>');  
+                      } else {
+                        $.ajax({
+                          url: urls[$(this).val()],
+                          data: { compact: true },
+                          beforeSend: function(xhr) {
+                            xhr.setRequestHeader("Accept", "application/json");
+                          },
+                          success: function(data, status, xhr) {
+                            var html = '<option></option>';
+                            $(data).each(function(i, el) {
+                              html += '<option value="' + el.id + '">' + el.label + '</option>';
+                            });
+                            $("#<%= "#{model_name}_#{field.name}" %>").html(html);
+                          }
+                        });
+                      }
                     });
                   });
                 <% end %>
