--- a/app/views/rails_admin/history/show.html.erb
+++ b/app/views/rails_admin/history/show.html.erb
@@ -15,7 +15,7 @@
           <form action="" method="get">
             <fieldset>
               <input type="text" id="searchBar" name="query" value="<%= query %>"/>
-              <input type="submit" id="searchbar_btn" value="<%= t("admin.list.search_btn")%>" />
+              <input type="submit" id="searchbar_btn" value="<%= t("admin.list.search_btn").upcase %>" />
             </fieldset>
           </form>
         </div>
