--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -22,25 +22,25 @@
   }
 <% end %>
 </style>
-      <div class="block list">
-        <div class="header">
-          <h2><%= @page_name %></h2>
-          <ul>
-            <li>
-             <%= link_to(t("admin.history.name"), rails_admin_history_model_path) %>
-            </li>
-            <li>
-             <%= link_to(t("admin.list.add_new"), rails_admin_new_path(:model_name => @abstract_model.to_param)) %>
-            </li>
-          </ul>
+      <div class="ra-block">
+        <div class="ui-widget-header">
+          <%= @page_name %>
         </div>
-        <div class="content">
+        <div class="ra-block-content">
           <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
-          <div class="highlight search">
+          <div class="ra-block-toolbar ui-state-highlight">
+            <ul>
+              <li>
+               <%= link_to(t("admin.history.name"), rails_admin_history_model_path, :class => "ra-button ui-button ui-state-default ui-corner-all") %>
+              </li>
+              <li>
+               <%= link_to(t("admin.list.add_new"), rails_admin_new_path(:model_name => @abstract_model.to_param), :class => "ra-button ui-button ui-state-default ui-corner-all") %>
+              </li>
+            </ul>
             <%= form_tag(params.reject{|key, value| key.to_sym == :page}, :method => "get", :remote => true) do %>
               <fieldset>
-                <input type="text" name="query" value="<%= query %>"/>
-                <input type="submit" class="button" value="<%= t("admin.list.search_btn") %>" />
+                <input type="text" name="query" value="<%= query %>" size="32" />
+                <input type="submit" class="ra-button" value="<%= t("admin.list.search_btn") %>" />
               </fieldset>
             <% end %>
           </div>
@@ -72,7 +72,7 @@
               <tfoot>
                 <tr>
                   <td colspan="<%= properties.length + 5 %>">
-                    <%= submit_tag t("admin.list.delete_selected"), :class => "button delete bulk" %>
+                    <%= submit_tag t("admin.list.delete_selected"), :class => "ra-button", :style => "float:right;margin-top: 10px;" %>
                     <div class="pagination">
                       <% if @page_count.to_i > 1 %>
                         <%= paginate(@current_page, @page_count, :url => params).html_safe %>
