--- a/app/views/rails_admin/main/_form_polymorphic_association.html.erb
+++ b/app/views/rails_admin/main/_form_polymorphic_association.html.erb
@@ -16,8 +16,8 @@
 %>
               <div class="field <%= field.to_param %>">
                 <%= label_tag field.to_param, field.label %>
-                <%= form.select type_column, type_collection, {:include_blank => true, :selected => selected_type}, :class => "selectField #{field.has_errors? ? "errorField" : nil}" %>
-                <%= form.select field.name, collection, {:include_blank => true, :selected => selected}, :class => "selectField #{field.has_errors? ? "errorField" : nil}", :style => "margin-left:10px;" %>
+                <%= form.select type_column, type_collection, {:include_blank => true, :selected => selected_type}, :class => "#{field.has_errors? ? "errorField" : nil}" %>
+                <%= form.select field.name, collection, {:include_blank => true, :selected => selected}, :class => "#{field.has_errors? ? "errorField" : nil}", :style => "margin-left:10px;" %>
                 <% if field.has_errors? %>
                 <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
                 <% end %>
