--- a/app/views/rails_admin/main/bulk_delete.html.erb
+++ b/app/views/rails_admin/main/bulk_delete.html.erb
@@ -1,18 +1,18 @@
-      <div class="block form edit">
-        <div class="header">
-          <h2>Delete confirmation</h2>
+      <div class="ra-block">
+        <div class="ui-widget-header">
+          Delete confirmation
         </div>
 <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
-        <div class="content">
+        <div class="ra-block-content">
           <p>Are you sure you want to delete the following object along with all of the following related items will be deleted:</p>
           <%= render :partial => "delete_notice", :collection => @bulk_objects %>
           <%= form_tag rails_admin_bulk_destroy_path(:model_name => @abstract_model.to_param, :bulk_ids => @bulk_ids) do %>
             <ul class="submit clearfix">
               <li>
-                <%= submit_tag t("admin.delete.confirmation"), :class => "button default" %>
+                <%= submit_tag t("admin.delete.confirmation"), :class => "ra-button ui-state-highlight" %>
               </li>
-              <li id="cancelContainer">
-                <%= submit_tag t("admin.new.cancel"), :class => "button", :name => "_continue", :id => "cancel_btn" %>
+              <li>
+                <%= submit_tag t("admin.new.cancel"), :class => "ra-button", :name => "_continue" %>
               </li>
             </ul>
           <% end =%>
