--- a/app/views/rails_admin/main/delete.html.erb
+++ b/app/views/rails_admin/main/delete.html.erb
@@ -1,18 +1,18 @@
-      <div class="block form edit">
-        <div class="header">
+      <div class="ra-block">
+        <div class="ui-widget-header">
           <h2>Delete confirmation</h2>
         </div>
-        <div class="content">
+        <div class="ra-block-content">
 <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
           <p>Are you sure you want to delete the <%= @abstract_model.pretty_name.downcase %> &ldquo;<strong><%= @model_config.list.with(:object => @object).object_label %></strong>&rdquo;? All of the following related items will be deleted:</p>
           <%= render :partial => "delete_notice", :object => @object %>
           <%= form_for(@object, :url => rails_admin_destroy_path(:model_name => @abstract_model.to_param, :id => @object.id), :html => {:method => "delete"}) do %>
             <ul class="submit clearfix">
               <li>
-                <%= submit_tag t("admin.delete.confirmation"), :class => "button default" %>
+                <%= submit_tag t("admin.delete.confirmation"), :class => "ra-button ui-state-highlight" %>
               </li>
-              <li id="cancelContainer">
-                <%= submit_tag t("admin.new.cancel"), :class => "button", :name => "_continue", :id => "cancel_btn" %>
+              <li>
+                <%= submit_tag t("admin.new.cancel"), :class => "ra-button", :name => "_continue" %>
               </li>
             </ul>
           <% end =%>
