--- a/app/views/rails_admin/main/new.html.erb
+++ b/app/views/rails_admin/main/new.html.erb
@@ -1,9 +1,9 @@
-      <div class="block form new">
-        <div class="header">
-          <h2><%= @page_name %></h2>
+      <div class="ra-block">
+        <div class="ui-widget-header">
+          <%= @page_name %>
         </div>
         <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
-        <div class="content">
+        <div class="ra-block-content">
           <%= form_for(@object, :url => rails_admin_create_path(:model_name => @abstract_model.to_param, :id => @object.id), :html => { :multipart => true }) do |form| %>
             <% @model_config.create.with(:object => @object).visible_groups.each do |fieldset| %>
               <%= render :partial => 'form_fieldset', :locals => { :fieldset => fieldset, :form => form, :object => @object } -%>
